--- a/base/src/main/AndroidManifest.xml
+++ b/base/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         android:required="false" />
 
     <application
-        android:extractNativeLibs="true"
+        android:extractNativeLibs="false"
         android:fullBackupContent="false"
         android:hardwareAccelerated="true"
         android:supportsRtl="false"
