--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -37,7 +37,7 @@ android {
         release {
             minifyEnabled false
             shrinkResources false
-            ndk.abiFilters 'x86', 'x86_64', 'armeabi', 'arm64-v8a'
+//            ndk.abiFilters 'x86', 'x86_64', 'armeabi', 'arm64-v8a'
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
@@ -45,28 +45,28 @@ android {
         }
     }
 
-    splits {
-        abi {
-            enable true
-            reset()
-            include 'x86', 'x86_64', 'armeabi', 'arm64-v8a' //select ABIs to build APKs for
-            universalApk true //generate an additional APK that contains all the ABIs
-        }
-    }
+//    splits {
+//        abi {
+//            enable true
+//            reset()
+//            include 'x86', 'x86_64', 'armeabi', 'arm64-v8a' //select ABIs to build APKs for
+//            universalApk true //generate an additional APK that contains all the ABIs
+//        }
+//    }
 
-    // map for the version code
-    project.ext.versionCodes = ['armeabi': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
-
-    android.applicationVariants.configureEach { variant ->
-        // assign different version code for each output
-        variant.outputs.each { output ->
-            output.outputFileName = "Windscribe" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
-
-            output.versionCodeOverride =
-                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
-                            1000000 + android.defaultConfig.versionCode
-        }
-    }
+//    // map for the version code
+//    project.ext.versionCodes = ['armeabi': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
+//
+//    android.applicationVariants.configureEach { variant ->
+//        // assign different version code for each output
+//        variant.outputs.each { output ->
+//            output.outputFileName = "Windscribe" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
+//
+//            output.versionCodeOverride =
+//                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
+//                            1000000 + android.defaultConfig.versionCode
+//        }
+//    }
 
     flavorDimensions = ['dim']
     productFlavors {
@@ -96,7 +96,7 @@ android {
         jniLibs {
             excludes += ['lib/arm64-v8a/libwg-quick.so', 'lib/armeabi-v7a/libwg-quick.so', 'lib/x86/libwg-quick.so', 'lib/x86_64/libwg-quick.so'
             ]
-            useLegacyPackaging = false
+            useLegacyPackaging true
         }
     }
     installation {
