--- a/base/build.gradle
+++ b/base/build.gradle
@@ -143,6 +143,10 @@ dependencies {
     kapt 'com.jakewharton:butterknife-compiler:10.2.3'
     api 'com.google.guava:guava:30.1.1-android'
     api 'net.grandcentrix.tray:tray:0.12.0'
+
+    // new
+    api 'com.tencent:mmkv-static:1.3.3'
+
     implementation 'org.isomorphism:token-bucket:1.6'
     // Test
     testImplementation "junit:junit:$JUnit"
