--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,9 @@
 # The setting is particularly useful for tweaking memory settings.
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx4024M -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#org.gradle.jvmargs=-Xmx4024M -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 #org.gradle.jvmargs=-Xmx4036m
+org.gradle.jvmargs=-Xmx3024M -Dkotlin.daemon.jvm.options="-Xmx3024M" -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 #android.bundle.enableUncompressedNativeLibs=false
 org.gradle.caching=true
 # When configured, Gradle will run in incubating parallel mode.
@@ -17,7 +18,6 @@ org.gradle.caching=true
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 org.gradle.parallel=true
 org.gradle.configuration-cache=true
-
 #android.nonTransitiveRClass=true
 #kotlin.code.style=official
 #kotlin.incremental=true
