--- a/base/build.gradle
+++ b/base/build.gradle
@@ -99,7 +99,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.aar'], exclude: [])
 
     api 'com.wireguard.android:tunnel:1.0.20230427'
-    implementation 'com.github.Windscribe:wstunnel:1.0.3'
+//    implementation 'com.github.Windscribe:wstunnel:1.0.3'
     //Rxjava
     api 'io.reactivex.rxjava2:rxandroid:2.1.1'
     api 'io.reactivex.rxjava2:rxjava:2.2.13'
