--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -94,11 +94,7 @@ android {
     }
     packagingOptions {
         jniLibs {
-            excludes += [
-//                    'lib/arm64-v8a/libovpnutil.so', 'lib/armeabi-v7a/libovpnutil.so', 'lib/x86/libovpnutil.so', 'lib/x86_64/libovpnutil.so',
-//                    'lib/arm64-v8a/libovpnexec.so', 'lib/armeabi-v7a/libovpnexec.so', 'lib/x86/libovpnexec.so', 'lib/x86_64/libovpnexec.so',
-//                    'lib/arm64-v8a/libopenvpn.so', 'lib/armeabi-v7a/libopenvpn.so', 'lib/x86/libopenvpn.so', 'lib/x86_64/libopenvpn.so',
-                    'lib/arm64-v8a/libwg-quick.so', 'lib/armeabi-v7a/libwg-quick.so', 'lib/x86/libwg-quick.so', 'lib/x86_64/libwg-quick.so'
+            excludes += ['lib/arm64-v8a/libwg-quick.so', 'lib/armeabi-v7a/libwg-quick.so', 'lib/x86/libwg-quick.so', 'lib/x86_64/libwg-quick.so'
             ]
             useLegacyPackaging true
         }
