add extract libs

--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:supportsRtl="false"
         android:largeHeap="true"
         android:theme="@style/DarkTheme"
+        android:extractNativeLibs="true"
         tools:targetApi="n"
         tools:ignore="DiscouragedApi">
         <activity
