--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -37,7 +37,12 @@ android {
         release {
             minifyEnabled false
             shrinkResources false
-//            ndk.abiFilters 'x86', 'x86_64', 'armeabi', 'arm64-v8a'
+            ndk.abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
+            packagingOptions {
+                jniLibs {
+                    useLegacyPackaging = true
+                }
+            }
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
@@ -45,33 +50,35 @@ android {
         }
     }
 
-//    splits {
-//        abi {
-//            enable true
-//            reset()
-//            include 'x86', 'x86_64', 'armeabi', 'arm64-v8a' //select ABIs to build APKs for
-//            universalApk true //generate an additional APK that contains all the ABIs
-//        }
-//    }
-
-//    // map for the version code
-//    project.ext.versionCodes = ['armeabi': 1, 'arm64-v8a': 2, 'x86': 3, 'x86_64': 4]
-//
-//    android.applicationVariants.configureEach { variant ->
-//        // assign different version code for each output
-//        variant.outputs.each { output ->
-//            output.outputFileName = "Windscribe" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
-//
-//            output.versionCodeOverride =
-//                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
-//                            1000000 + android.defaultConfig.versionCode
-//        }
-//    }
-
-    flavorDimensions = ['dim']
+    splits {
+        abi {
+            enable true
+            reset()
+            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a' //select ABIs to build APKs for
+            universalApk true //generate an additional APK that contains all the ABIs
+        }
+    }
+    flavorDimensions "dim"
     productFlavors {
         fdroid {
-            dimension 'dim'
+            dimension "dim"
+            // Set extractNativeLibs to false to prevent extracting native libraries
+            ndk {
+                abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a', 'x86_64'
+            }
+            packagingOptions {
+                doNotStrip "*/armeabi-v7a/*.so"
+                doNotStrip "*/x86/*.so"
+                doNotStrip "*/arm64-v8a/*.so"
+                doNotStrip "*/x86_64/*.so"
+            }
+            defaultConfig {
+                packagingOptions {
+                    jniLibs {
+                        useLegacyPackaging = true
+                    }
+                }
+            }
         }
     }
     compileOptions {
@@ -96,7 +103,7 @@ android {
         jniLibs {
             excludes += ['lib/arm64-v8a/libwg-quick.so', 'lib/armeabi-v7a/libwg-quick.so', 'lib/x86/libwg-quick.so', 'lib/x86_64/libwg-quick.so'
             ]
-            useLegacyPackaging true
+            useLegacyPackaging = true
         }
     }
     installation {
