--- a/base/build.gradle
+++ b/base/build.gradle
@@ -66,27 +66,10 @@ android {
         }
     }
 
-    flavorDimensions "dim"
+    flavorDimensions = ["dim"]
     productFlavors {
         fdroid {
             dimension "dim"
-            // Set extractNativeLibs to false to prevent extracting native libraries
-            ndk {
-                abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a', 'x86_64'
-            }
-            packagingOptions {
-                doNotStrip "*/armeabi-v7a/*.so"
-                doNotStrip "*/x86/*.so"
-                doNotStrip "*/arm64-v8a/*.so"
-                doNotStrip "*/x86_64/*.so"
-            }
-            defaultConfig {
-                packagingOptions {
-                    jniLibs {
-                        useLegacyPackaging = true
-                    }
-                }
-            }
         }
     }
 }
