--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -29,20 +29,13 @@ android {
         versionName appVersionName
         versionCode appVersionCode
         vectorDrawables.useSupportLibrary = true
-
-        //testInstrumentationRunner "sp.windscribe.vpn.CustomRunner"
     }
 
     buildTypes {
         release {
             minifyEnabled false
             shrinkResources false
-            ndk.abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
-            packagingOptions {
-                jniLibs {
-                    useLegacyPackaging = true
-                }
-            }
+            ndk.abiFilters 'armeabi-v7a', 'arm64-v8a'
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug{
@@ -54,31 +47,14 @@ android {
         abi {
             enable true
             reset()
-            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a' //select ABIs to build APKs for
+            include 'armeabi-v7a', 'arm64-v8a' //select ABIs to build APKs for
             universalApk true //generate an additional APK that contains all the ABIs
         }
     }
-    flavorDimensions "dim"
+    flavorDimensions = ["dim"]
     productFlavors {
         fdroid {
             dimension "dim"
-            // Set extractNativeLibs to false to prevent extracting native libraries
-            ndk {
-                abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a', 'x86_64'
-            }
-            packagingOptions {
-                doNotStrip "*/armeabi-v7a/*.so"
-                doNotStrip "*/x86/*.so"
-                doNotStrip "*/arm64-v8a/*.so"
-                doNotStrip "*/x86_64/*.so"
-            }
-            defaultConfig {
-                packagingOptions {
-                    jniLibs {
-                        useLegacyPackaging = true
-                    }
-                }
-            }
         }
     }
     compileOptions {
