--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -54,7 +54,7 @@ android {
     }
     flavorDimensions = ["dim"]
     productFlavors {
-        fdroid {
+        sp {
             dimension "dim"
         }
     }
@@ -89,6 +89,20 @@ android {
     sourceSets {
         main {
             jniLibs.srcDirs = ['libs']
+        }
+    }
+
+    // map for the version code
+    project.ext.versionCodes = ['armeabi': 1, 'arm64-v8a': 2]
+
+    android.applicationVariants.configureEach { variant ->
+        // assign different version code for each output
+        variant.outputs.each { output ->
+            output.outputFileName = "Windscibe_Pre_Universal" + variant.versionName + "_" + output.getFilter(com.android.build.OutputFile.ABI) + ".apk"
+
+            output.versionCodeOverride =
+                    project.ext.versionCodes.get(output.getFilter(com.android.build.OutputFile.ABI), 0) *
+                            1000000 + android.defaultConfig.versionCode
         }
     }
 }
