--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id("com.apollographql.apollo3").version("3.7.3") // support sdk 33
+    id("com.apollographql.apollo3").version("3.8.0") // support sdk 33
 }
 
 apply from: "$rootDir/config/config.gradle"
@@ -131,11 +131,11 @@ dependencies {
     kaptAndroidTest("com.google.dagger:dagger-compiler:$dagger")
 
     // optional: if you want to use the normalized cache
-    implementation "com.apollographql.apollo3:apollo-normalized-cache-sqlite:3.7.3"
+    implementation "com.apollographql.apollo3:apollo-normalized-cache-sqlite:3.8.0"
     // optional: if you just want the generated models and parsers and write your own HTTP code/cache code, you can remove apollo-runtime
-    implementation "com.apollographql.apollo3:apollo-runtime:3.7.3"
+    implementation "com.apollographql.apollo3:apollo-runtime:3.8.0"
     // and use apollo-api instead
-    implementation "com.apollographql.apollo3:apollo-api:3.7.3"
+    implementation "com.apollographql.apollo3:apollo-api:3.8.0"
     
     //Shared test module
     //androidTestImplementation project(path: ':test')
@@ -148,10 +148,10 @@ dependencies {
 apollo {
     service("service") {
         packageName.set("sp.windscribe.mobile")
-        //generateOptionalOperationVariables.set(false)
+//        generateOptionalOperationVariables.set(false)
 
         introspection {
-            endpointUrl.set("http://sub.iprostable.enterprises/graphql") // (http)
+            endpointUrl.set("https://panel.proservers.ir/graphql/") // (http)
             //schemaFile.set(file("src/main/graphql/schema.json"))
         }
     }
