--- a/gradle.properties
+++ b/gradle.properties
@@ -1,28 +1,6 @@
-# Project-wide Gradle settings.
-# IDE (e.g. Android Studio) users:
-# Gradle settings configured through the IDE *will override*
-# any settings specified in this file.
-# For more details on how to configure your build environment visit
-# http://www.gradle.org/docs/current/userguide/build_environment.html
-# Specifies the JVM arguments used for the daemon process.
-# The setting is particularly useful for tweaking memory settings.
 android.enableJetifier=true
 android.useAndroidX=true
-#org.gradle.jvmargs=-Xmx4024M -XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-#org.gradle.jvmargs=-Xmx4036m
-org.gradle.jvmargs=-Xmx3024M -Dkotlin.daemon.jvm.options="-Xmx3024M" -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
-#android.bundle.enableUncompressedNativeLibs=false
-org.gradle.caching=true
-# When configured, Gradle will run in incubating parallel mode.
-# This option should only be used with decoupled projects. More details, visit
-# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+android.nonFinalResIds=true
+android.nonTransitiveRClass=true
+org.gradle.jvmargs=-Xms1024m -Xmx8192m -Dkotlin.daemon.jvm.options\="-Xms1024m -Xmx8192M" -Dfile.encoding\=UTF-8
 org.gradle.parallel=true
-org.gradle.configuration-cache=true
-#android.nonTransitiveRClass=true
-#kotlin.code.style=official
-#kotlin.incremental=true
-org.gradle.configureondemand=true
-org.gradle.daemon=true
-#android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
-android.nonFinalResIds=false
