--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.3.2'
         classpath 'org.owasp:dependency-check-gradle:6.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin"
+        classpath "com.apollographql.apollo3:apollo-gradle-plugin:3.8.0"
     }
 }
 
