--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id("com.apollographql.apollo3").version("3.8.0") // support sdk 33
+    id "com.apollographql.apollo3" // support sdk 33
 }
 
 apply from: "$rootDir/config/config.gradle"
