--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 android.enableJetifier=true
 android.useAndroidX=true
-android.nonFinalResIds=true
-android.nonTransitiveRClass=true
-org.gradle.jvmargs=-Xms1024m -Xmx5120m -Dkotlin.daemon.jvm.options\="-Xms1024m -Xmx5120M" -Dfile.encoding\=UTF-8
+org.gradle.jvmargs=-Xms1024m -Xmx5120m -Dfile.encoding\=UTF-8
+kotlin.daemon.jvmargs=-Xmx1500m -Xms=500m
+kotlin.incremental=false
 org.gradle.parallel=true
+org.gradle.daemon=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
