normalize gradle.properties

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xms1024m -Xmx5120m -Dfile.encoding\=UTF-8
-kotlin.daemon.jvmargs=-Xmx1500m -Xms=500m
+org.gradle.jvmargs=-Xms1024m -Xmx3072m -Dfile.encoding=UTF-8
+kotlin.daemon.jvmargs=-Xmx3072m -Xms=Xms1024m
 kotlin.incremental=false
 org.gradle.parallel=true
 org.gradle.daemon=true
