--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -13,7 +13,7 @@ def appVersionCode = 1340
 def appVersionName = "5.1.0"
 
 android {
-    compileSdk rootProject.appCompiledSdk
+    compileSdk 34
     namespace 'sp.windscribe.mobile'
     ndkVersion '26.1.10909125'
 
@@ -25,8 +25,8 @@ android {
 
     defaultConfig {
         applicationId rootProject.AppId
-        minSdkVersion rootProject.appMinSdk
-        targetSdkVersion rootProject.appTargetSdk
+        minSdkVersion 21
+        targetSdkVersion 34
         versionName appVersionName
         versionCode appVersionCode
         vectorDrawables.useSupportLibrary = true
@@ -64,7 +64,7 @@ android {
         coreLibraryDesugaringEnabled = true
     }
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_17
+        jvmTarget = JavaVersion.VERSION_17.toString()
     }
 
     buildFeatures {
