--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,12 @@
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xmx3024M -Dkotlin.daemon.jvm.options="-Xmx3024M" -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms1024m -Xmx3024M -Dkotlin.daemon.jvm.options=-Xmx3024m,Xms=500m -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
+# Deamon
 kotlin.incremental=true
+kotlin.daemon.useFallbackStrategy=false
 org.gradle.configureondemand=true
 org.gradle.daemon=true
+# non
 android.nonTransitiveRClass=false
 android.nonFinalResIds=false
