cleanup, fix error

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xms1024m -Xmx3024M -Dkotlin.daemon.jvm.options=-Xmx3024m,Xms=500m -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms1024m -Xmx3024M -Dkotlin.daemon.jvm.options=-Xmx3024m -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 # Deamon
 kotlin.incremental=true
