--- a/build.gradle
+++ b/build.gradle
@@ -1,43 +1,5 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-project.ext {
-    AppName = "Windscribe"
-    AppId = "sp.windscribe.vpn"
-}
-
-// با احتیاط تغییر دهید
+// by MRB
 buildscript {
-    //Android
-    ext.leanBack = "1.0.0"
-    ext.material = "1.8.0"
-    ext.appCompat = "1.6.1"
-    ext.navigation = "2.5.3"
-    ext.archLifecycle = '2.6.1'
-    ext.coroutines_version = '1.6.0'
-    ext.coroutinesCore = "1.6.4"
-    //Kotlin
-    ext.kotlin = "1.8.0"
-    ext.ktx_core = "1.9.0"
-    ext.desugarJdk = "2.0.3"
-    ext.kotlin_std_lib = "1.8.10"
-    //Feature
-    ext.retrofit = "2.9.0"
-    ext.fireBase = "23.1.2"
-    ext.butterknife = "10.2.3"
-    ext.glide = "4.11.0"
-    ext.epoxyVersion = "4.6.3"
-    ext.dagger = "2.34"
-    ext.room = '2.5.1'
-    ext.work_manager = "2.8.1"
-    //Test
-    ext.JUnit = "4.13.2"
-    ext.testCore = "1.5.0"
-    ext.coreVersion = "1.6.0-alpha01"
-    ext.extJUnitVersion = "1.2.0-alpha01"
-    ext.runnerVersion = "1.6.0-alpha01"
-    ext.espressoVersion = "3.5.1"
-    ext.robolectricVersion = "4.6.1"
-    ext.extTruthVersion = '1.3.0-rc01'
-
     repositories {
         google()
         mavenCentral()
@@ -45,7 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:8.4.1'
         classpath 'org.owasp:dependency-check-gradle:6.2.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.9.23"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
         classpath "com.apollographql.apollo3:apollo-gradle-plugin:3.8.0"
     }
 }
