--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -115,10 +115,10 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:2.7.7"
     implementation "androidx.navigation:navigation-ui-ktx:2.7.7"
     //kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.9.23"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.10"
     implementation "androidx.core:core-ktx:1.13.1"
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:$desugarJdk"
+    coreLibraryDesugaring "com.android.tools:desugar_jdk_libs:2.0.4"
     //Core Module
     implementation project(path: ':base')
     implementation fileTree(dir: 'libs', include: ['*.aar'], exclude: []) // v2ray module
@@ -126,7 +126,7 @@ dependencies {
     //Kapt
     kapt "com.github.bumptech.glide:compiler:4.16.0"
     kapt "com.jakewharton:butterknife-compiler:10.2.3"
-    kapt "androidx.room:room-compiler:2.6.1"
+    kapt "androidx.room:room-compiler:2.5.1"
     kapt "com.google.dagger:dagger-compiler:2.34"
     kaptAndroidTest("com.google.dagger:dagger-compiler:2.34")
 
@@ -139,7 +139,7 @@ dependencies {
     
     //Shared test module
     //androidTestImplementation project(path: ':test')
-    androidTestImplementation "androidx.work:work-testing:2.8.1"
+    androidTestImplementation "androidx.work:work-testing:2.9.0"
     implementation "androidx.test.espresso:espresso-intents:3.5.1"
     implementation 'androidx.test.uiautomator:uiautomator:2.3.0'
     implementation "androidx.core:core-splashscreen:1.0.1"
