--- a/base/build.gradle
+++ b/base/build.gradle
@@ -151,11 +151,9 @@ dependencies {
     api 'com.google.guava:guava:32.1.3-android'
     api 'net.grandcentrix.tray:tray:0.12.0'
 
-//    implementation 'com.google.dagger:hilt-android:2.34'
-//    kapt 'com.google.dagger:hilt-compiler:2.34'
-
     // new
     api 'com.tencent:mmkv-static:1.3.4'
+    api 'com.google.android.gms:play-services-ads:23.1.0'
 
     implementation 'org.isomorphism:token-bucket:1.6'
     // Test
