--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -131,11 +131,11 @@ dependencies {
     kaptAndroidTest("com.google.dagger:dagger-compiler:2.34")
 
     // optional: if you want to use the normalized cache
-    implementation "com.apollographql.apollo3:apollo-normalized-cache-sqlite:3.8.0"
+   // implementation "com.apollographql.apollo3:apollo-normalized-cache-sqlite:3.8.0"
     // optional: if you just want the generated models and parsers and write your own HTTP code/cache code, you can remove apollo-runtime
-    implementation "com.apollographql.apollo3:apollo-runtime:3.8.0"
+    implementation "com.apollographql.apollo3:apollo-runtime:3.8.4"
     // and use apollo-api instead
-    implementation "com.apollographql.apollo3:apollo-api:3.8.0"
+    implementation "com.apollographql.apollo3:apollo-api:3.8.4"
     
     //Shared test module
     //androidTestImplementation project(path: ':test')
@@ -151,7 +151,7 @@ apollo {
 //        generateOptionalOperationVariables.set(false)
 
         introspection {
-            endpointUrl.set("https://panel.proservers.ir/graphql/") // (http)
+            endpointUrl.set("https://panel.proservers.ir/graphql/")
             //schemaFile.set(file("src/main/graphql/schema.json"))
         }
     }
