--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -56,6 +56,7 @@ android {
     productFlavors {
         sp {
             dimension "dim"
+            multiDexEnabled true
         }
     }
     compileOptions {
