fix heap size (gradle)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 android.enableJetifier=true
 android.useAndroidX=true
-org.gradle.jvmargs=-Xms1024m -Xmx3024M -Dkotlin.daemon.jvm.options=-Xmx2024m -XX:+UseParallelGC -XX:MaxMetaspaceSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xms512M -Xmx3024M -Dkotlin.daemon.jvm.options=-Xmx2024m -XX:+UseParallelGC -XX:MaxMetaspaceSize=512M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 # Deamon
 kotlin.incremental=true
